# taxes-2025

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NOTES.md  README.md  SUMMARY.md  UPDATES-000.md  UPDATES-001.md  calculator.py  main.py  models.py  ors316.html  pdf_filler.py  pyproject.toml  server.py  strip_markup.py  tasks.md  title-26.json
.github/workflows/: ci.yml  publish.yml
forms/: download_forms.py  field_discovery.py
forms/mappings/: f1040.json
static/: index.html
static/js/: app.js
tests/: conftest.py  test_pdf_filler.py  test_schema.py  test_schema_references.py
tests/e2e/: conftest.py  test_amt.py  test_carryforwards_surtaxes.py  test_education_credits.py  test_eitc.py  test_head_of_household.py  test_k1_income.py  test_married_hsa.py  test_married_itemized.py  test_married_joint_children.py  test_new_income_credits.py  test_premium_tax_credit.py  test_retirement_income.py  test_self_employed.py  test_single_investment_income.py  test_single_w2_standard.py  test_wizard_flow.py
tests/features/: amt.feature  carryforwards_and_surtaxes.feature  education_credits.feature  eitc_eligibility.feature  head_of_household.feature  k1_income.feature  married_hsa.feature  married_itemized.feature  married_joint_w2_children.feature  new_income_credits.feature  premium_tax_credit.feature  retirement_income.feature  self_employed.feature  single_investment_income.feature  single_itemized_deductions.feature  single_w2_standard.feature
tests/step_defs/: test_amt.py  test_carryforwards_surtaxes.py  test_education_credits.py  test_eitc_eligibility.py  (+12 more)
(+40 files in other folders)
